WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132713
Automatically zip document bundles used via File API
https://bugs.webkit.org/show_bug.cgi?id=132713
Summary
Automatically zip document bundles used via File API
Alexey Proskuryakov
Reported
2014-05-08 16:31:48 PDT
In Safari, we automatically archive document bundles when submitted via forms. Let's do the same for File API. We can pre-compute file type and name, but if a script asks for size, we'll need to synchronously archive at this point. If a script does not, we can do this lazily when uploading (e.g. the script could build a blob with file parts, and use Blob or FormData forms of XMLHttpRequest.send()). <
rdar://problem/13397892
>
Attachments
proposed patch
(30.51 KB, patch)
2014-05-08 16:54 PDT
,
Alexey Proskuryakov
andersca
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(483.10 KB, application/zip)
2014-05-08 19:28 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2
(490.55 KB, application/zip)
2014-05-08 20:23 PDT
,
Build Bot
no flags
Details
patch for landing
(30.62 KB, patch)
2014-05-08 20:58 PDT
,
Alexey Proskuryakov
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2014-05-08 16:54:44 PDT
Created
attachment 231113
[details]
proposed patch
WebKit Commit Bot
Comment 2
2014-05-08 16:56:28 PDT
Attachment 231113
[details]
did not pass style-queue: ERROR: Source/WebCore/platform/network/mac/BlobDataFileReferenceMac.mm:63: Place brace on its own line for function definitions. [whitespace/braces] [4] ERROR: Source/WebCore/platform/network/mac/BlobDataFileReferenceMac.mm:69: Missing space before { [whitespace/braces] [5] Total errors found: 2 in 17 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Carlsson
Comment 3
2014-05-08 16:59:55 PDT
Comment on
attachment 231113
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=231113&action=review
> Source/WebCore/FileMac.mm:1 > +/*
I don't think you meant to put this file here.
Build Bot
Comment 4
2014-05-08 19:28:43 PDT
Comment on
attachment 231113
[details]
proposed patch
Attachment 231113
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5682755736174592
New failing tests: http/tests/misc/empty-file-formdata.html
Build Bot
Comment 5
2014-05-08 19:28:46 PDT
Created
attachment 231123
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Build Bot
Comment 6
2014-05-08 20:23:04 PDT
Comment on
attachment 231113
[details]
proposed patch
Attachment 231113
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/4803655119142912
New failing tests: svg/text/non-bmp-positioning-lists.svg http/tests/misc/empty-file-formdata.html
Build Bot
Comment 7
2014-05-08 20:23:07 PDT
Created
attachment 231125
[details]
Archive of layout-test-results from webkit-ews-15 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-15 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
Alexey Proskuryakov
Comment 8
2014-05-08 20:58:35 PDT
Created
attachment 231127
[details]
patch for landing
WebKit Commit Bot
Comment 9
2014-05-08 21:37:57 PDT
Comment on
attachment 231127
[details]
patch for landing Clearing flags on attachment: 231127 Committed
r168518
: <
http://trac.webkit.org/changeset/168518
>
WebKit Commit Bot
Comment 10
2014-05-08 21:38:03 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 11
2014-05-15 13:59:29 PDT
Forgot to land the tests. Landed them in <
http://trac.webkit.org/r168908
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug