Source/WTF/wtf/FeatureDefines.h
@@ -236,6 +236,10 @@
 #define ENABLE_MEDIA_SOURCE 1
 #endif
 
+#if !defined(ENABLE_FILE_REPLACEMENT)
+#define ENABLE_FILE_REPLACEMENT 1
+#endif
+
 #endif /* PLATFORM(MAC) */
 
 /* --------- Apple Windows port --------- */
